--- a/index.html
+++ b/index.html
@@ -146,26 +146,26 @@
         <!-- More photos of BVConnect App -->
         <div class="projectContent">
             <div class="img1">
-                <div><img id="img1" src="BVConnectApp/Welcome to BVConnect App/24.png"
+                <div><img id="img1" src="24.png"
                         alt="BVConnectAppWelcomeScreen"></a></div>
             </div>
             <div class="img2">
-                <div><img id="img2" src="BVConnectApp/Welcome to BVConnect App/25.png"
+                <div><img id="img2" src="25.png"
                         alt="BVConnectAppLogInScreen"></a>
                 </div>
             </div>
             <div class="img3">
-                <div><img id="img3" src="BVConnectApp/Welcome to BVConnect App/26.png"
+                <div><img id="img3" src="26.png"
                         alt="BVConnectAppCreateNewAccount"></a>
                 </div>
             </div>
             <div class="img4">
-                <div><img id="img4" src="BVConnectApp/Welcome to BVConnect App/27.png"
+                <div><img id="img4" src="27.png"
                         alt="BVConnectAppStudentLogInScreen"></a>
                 </div>
             </div>
             <div class="img5">
-                <div><img id="img5" src="BVConnectApp/Welcome to BVConnect App/28.png"
+                <div><img id="img5" src="28.png"
                         alt="BVConnectAppResetPassword"></a>
                 </div>
             </div>
